<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="nov.me.kanmodel.notes.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"
        android:summary="@string/pref_header_general_summary"/>

    <header
        android:fragment="nov.me.kanmodel.notes.SettingsActivity$FontFragment"
        android:icon="@drawable/ic_font_black_24dp"
        android:title="@string/pref_header_font"
        android:summary="@string/pref_header_font_summary"/>

    <header
        android:id="@+id/header_backup"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/pref_header_backup"
        android:summary="@string/pref_header_backup_summary" />

</preference-headers>
