<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_note"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/main_menu_add"
        app:showAsAction="ifRoom|withText" />
    <group
        android:id="@+id/main_menu_debug"
        android:visible="false">
        <item
            android:id="@+id/main_menu_add"
            android:title="添加[开发用]" />
        <item
            android:id="@+id/list_database"
            android:title="数据库遍历[输出至Logcat]" />
        <item
            android:id="@+id/remove_note"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/main_menu_delete"
            app:showAsAction="withText" />
    </group>
    <item
        android:id="@+id/note_clear"
        android:title="清空列表" />
    <item
        android:id="@+id/main_menu_setting"
        android:title="@string/main_menu_setting" />
</menu>